--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "mongoose": "^8.18.2",
-    "node": "^24.8.0"
+    "node": "^24.8.0",
+    "validator": "^13.15.15"
   }
 }
