--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Dheeraj Singh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.18.2",
     "node": "^24.8.0",
